# LLVM-Constant-Propagation

./: README.md
My Solution/: CMakeLists.txt  LICENSE  README.md
My Solution/catpass/: CMakeLists.txt  CatPass.cpp
tests/misc/: Makefile  run_tests.sh
tests/test0/: Makefile  myout  program.bc  program.c  program.ll  program_optimized.bc  program_optimized.ll
tests/test1/: myout  program.bc  program.c  program.ll  program_optimized.bc  program_optimized.ll
tests/test2/: Makefile  myout  program.bc  program.c  program.ll  program_optimized.bc  program_optimized.ll
tests/test3/: myout  program.bc  program.c  program.ll  program_optimized.bc  program_optimized.ll
tests/test4/: myout  program.bc  program.c  program.ll  program_optimized.bc  program_optimized.ll
tests/test5/: myout  program.bc  program.c  program.ll  program_optimized.bc  program_optimized.ll
